# packages/server/src/models/customer.ts
@@ -1,5 +1,6 @@
 import { FastifyInstance } from 'fastify'
 import CustomError from '../errors/CustomError'
+import { Contract } from './contract'
 
 export interface Customer {
   id: number
@@ -7,15 +8,40 @@ export interface Customer {
   email: string
   phone: string
   address: string
+  emailNotification: boolean
+  smsNotification: boolean
+  kakaoNotification: boolean
 }
 
-export const createCustomer = async (server: FastifyInstance, name: string, email: string, phone: string, address: string): Promise<Customer> => {
+function convertToCamelCase(row: any): Customer {
+  return {
+    id: row.id,
+    name: row.name,
+    email: row.email,
+    phone: row.phone,
+    address: row.address,
+    emailNotification: row.email_notification,
+    smsNotification: row.sms_notification,
+    kakaoNotification: row.kakao_notification,
+  };
+}
+
+export const createCustomer = async (
+  server: FastifyInstance,
+  name: string,
+  email: string,
+  phone: string,
+  address: string,
+  emailNotification: boolean,
+  smsNotification: boolean,
+  kakaoNotification: boolean,
+): Promise<Customer> => {
   try {
     const { rows } = await server.pg.query(
-      'INSERT INTO customers (name, email, phone, address) VALUES ($1, $2, $3, $4) RETURNING *',
-      [name, email, phone, address]
+      'INSERT INTO customers (name, email, phone, address, email_notification, sms_notification, kakao_notification) VALUES ($1, $2, $3, $4, $5, $6, $7) RETURNING *',
+      [name, email, phone, address, emailNotification, smsNotification, kakaoNotification]
     )
-    return rows[0]
+    return convertToCamelCase(rows[0])
   } catch(e) {
     server.log.error(e)
     throw new CustomError("failed to create customer", 500);
@@ -25,7 +51,7 @@ export const createCustomer = async (server: FastifyInstance, name: string, emai
 export const findAllCustomers = async (server: FastifyInstance): Promise<Customer[]> => {
   try {
     const { rows } = await server.pg.query('SELECT * FROM customers')
-    return rows
+    return rows.map(convertToCamelCase)
   } catch(e) {
     server.log.error(e)
     throw new CustomError("failed to find all customers", 500);
@@ -38,23 +64,33 @@ export const findCustomerById = async (server: FastifyInstance, id: number): Pro
     if (rows.length === 0) {
       return null
     }
-    return rows[0]
+    return convertToCamelCase(rows[0])
   } catch(e) {
     server.log.error(e)
     throw new CustomError("failed to find customer by id", 500);
   }
 }
 
-export const updateCustomerById = async (server: FastifyInstance, id: number, name: string, email: string, phone: string, address: string): Promise<Customer | null> => {
+export const updateCustomerById = async (
+  server: FastifyInstance,
+  id: number,
+  name: string,
+  email: string,
+  phone: string,
+  address: string,
+  emailNotification: boolean,
+  smsNotification: boolean,
+  kakaoNotification: boolean,
+): Promise<Customer | null> => {
   try {
     const { rows } = await server.pg.query(
-      'UPDATE customers SET name = $2, email = $3, phone = $4, address = $5 WHERE id = $1 RETURNING *',
-      [id, name, email, phone, address]
+      'UPDATE customers SET name = $2, email = $3, phone = $4, address = $5, email_notification = $6, sms_notification = $7, kakao_notification = $8 WHERE id = $1 RETURNING *',
+      [id, name, email, phone, address, emailNotification, smsNotification, kakaoNotification]
     )
     if (rows.length === 0) {
       return null
     }
-    return rows[0]
+    return convertToCamelCase(rows[0])
   } catch(e) {
     server.log.error(e)
     throw new CustomError("failed to update customer by id", 500);
@@ -67,7 +103,7 @@ export const deleteCustomerById = async (server: FastifyInstance, id: number): P
     if (rows.length === 0) {
       return null
     }
-    return rows[0]
+    return convertToCamelCase(rows[0])
   } catch(e) {
     server.log.error(e)
     throw new CustomError("failed to delete customer by id", 500);
