# packages/server/src/routes/index.ts
@@ -4,6 +4,7 @@ import { customerRoutes } from '../controllers/customerController'
 import { productRoutes } from '../controllers/productController'
 import { notificationRoutes } from '../controllers/notificationController'
 import { userRoutes } from '../controllers/userController'
+import { contractRoutes } from '../controllers/contractController'
 
 const routes = async (
   server: FastifyInstance,
@@ -14,6 +15,7 @@ const routes = async (
   })
 
   const apiV1 = '/api/v1'
+  server.register(contractRoutes, { prefix: `${apiV1}/contracts` })
   server.register(customerRoutes, { prefix: `${apiV1}/customers` })
   server.register(productRoutes, { prefix: `${apiV1}/products` })
   server.register(notificationRoutes, { prefix: `${apiV1}/notifications` })
